2004-05-20  JP Rosevear  <jpr@novell.com>

	* e-task-widget.c (e_task_widget_construct): only unref the mask
	if there is one

2004-05-19  JP Rosevear  <jpr@novell.com>

	* Makefile.am: don't dist the error .h file

2004-05-18  Not Zed  <NotZed@Ximian.com>

	* e-error.c (ee_load): load the <help> tag if present.
	(ee_response): handle the help response and swallow the signal.
	(e_error_newv): setup help button if we have a help uri.

2004-05-17  Jeffrey Stedfast  <fejj@novell.com>

	* e-url-entry.c (init): Use E_ICON_SIZE_BUTTON for the icon size
	in the e_icon_factory_get_icon() call.

	* e-combo-button.c (create_empty_image_widget): Don't hard-code
	the size of the icon in pixels, instead use the appropriate
	E_ICON_SIZE_ enum.

2004-05-17  JP Rosevear  <jpr@novell.com>

	Fixes #58460
	
	* e-task-widget.c (e_task_widget_construct): bitmap_unref the
	mask, don't object_unref it

2004-05-12  Not Zed  <NotZed@Ximian.com>

	* e-error.c (ee_load): duh, use the right node pointer for title
	and secondary text.

	* e-system-errors.xml: make the Because cases the same.

	* e-system-errors.xml.h: add for translators.

	* e-error.c (ee_load): just use _() to do i18n rather than the
	nasty lang stuff.
	(find_node): no longer needed.

	* Makefile.am (%.xml.h): setup the build rules for the i18n file
	for the errors.

	* e-system-errors.xml.in: Removed, renamed to .xml and removed the
	_ stuff.

2004-05-04  Xan Lopez  <xan@gnome.org>

	* Makefile.am:

        Build fixes.

2004-05-03  Not Zed  <NotZed@Ximian.com>

	* e-error.c (ee_build_label): blah, need to do entity decoding.
	#57918.

2004-04-29  JP Rosevear  <jpr@ximian.com>

	* e-activity-handler.c (impl_dispose): pass the correct data when
	weak unreffing

2004-04-29  Not Zed  <NotZed@Ximian.com>

	* e-error.c (e_error_newv): make the label selectable.
	(e_error_newv): if we have stock and label set, then use a stock
	button with an override label.

2004-04-28  Not Zed  <NotZed@Ximian.com>
